improved error message

--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -11,6 +11,11 @@ body {
   color: #2c3e50;
   margin-top: 60px;
 }
+.error{
+  background-color: red;
+  color: #fff;
+  font-weight: bolder;
+}
 .header{
   width: 100%;
   display: flex;
